get a student
